prevent users search from returning the current user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,6 +12,9 @@
                         </span>
                     </div>
                 </div>
+                <div class="container has-text-centered">
+                    <%= submit_tag "Search", class: "button is-primary" %>
+                </div>
             <% end %>
         </div>
 
