add comment integration tests

--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -104,7 +104,7 @@
                                     </a>
                                     <small><%= distance_of_time_in_words(Time.now, comment.created_at)%> ago</small>
                                     <br>
-                                    <%= comment.body %>
+                                    <p><%= comment.body %></p>
                                     <br>
                                 </p>
                             </div>
