--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,3 +15,4 @@
 
 <%= javascript_pack_tag 'comment_form' %>
 <%= javascript_pack_tag 'edit_post_form' %>
+<%= javascript_pack_tag 'image_upload' %>
