--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,6 +25,13 @@
     
 
     <div class="field">
+        <%= f.label :username, class: "label" %>
+        <div class="control">
+            <%= f.text_field :username, class: "input" %>
+        </div>
+    </div>
+
+    <div class="field">
         <%= f.label :first_name, class: "label" %>
         <div class="control">
             <%= f.text_field :first_name, class: "input" %>
